# rust-finance

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  check_env.ps1  check_errors.txt  clippy.toml  run_bot.bat  run_tui.bat
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: config.example.toml
benchmarks/: Cargo.toml
benchmarks/benches/: 09_memory_layout.rs
benchmarks/src/: lib.rs
config/prompts/: dexter_system.txt  mirofish_system.txt
crates/ai/: Cargo.toml
crates/ai/src/: analyst.rs  anthropic_client.rs  dexter.rs  lib.rs  simulator.rs
crates/ai/src/client/: mod.rs  rate_limiter.rs  validator.rs
crates/backtest/src/: engine.rs
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: dashboard.rs  env_writer.rs  events.rs  key_validator.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ai_pipeline.rs  hybrid_pipeline.rs  main.rs  shutdown.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: lib.rs
crates/execution/src/: router.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/executor/src/algos/: mod.rs  twap.rs  vwap.rs
crates/executor/src/strategies/: mod.rs
crates/executor/src/strategies/market_making/: adverse_selection.rs  avellaneda_stoikov.rs  mod.rs
crates/executor/src/strategies/pairs/: mod.rs  spread_model.rs
crates/executor/src/strategies/stat_arb/: cointegration.rs
crates/feature/: Cargo.toml
crates/feature/src/: lib.rs
crates/fix/src/: lib.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: alpaca_ws.rs  finnhub_ws.rs  lib.rs  main.rs  mock.rs  normalizer.rs  reconnect.rs  service.rs
crates/ml/: Cargo.toml
crates/ml/src/rl/: environment.rs  mod.rs  ppo_agent.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: gate.rs  kill_switch.rs  lib.rs
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/swarm_sim/: Cargo.toml
crates/swarm_sim/src/: agent.rs  config.rs  digital_twin.rs  engine.rs  interview.rs  lib.rs  market.rs  persistence.rs  scenario.rs  signal.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  layout.rs  main.rs  setup.rs  state.rs
crates/web/: Cargo.toml
crates/web-dashboard/: Cargo.toml
crates/web-dashboard/src/: lib.rs
crates/web-dashboard/src/static/: index.html
crates/web/src/: main.rs
data/: trades.sqlite-shm  trades.sqlite-wal
docs/: CURRENT_STATE.md  architecture.md  fix_plan.md  swarm_simulation.md
docs/architecture/: architecture_overview.md
infra/docker/: Dockerfile
scripts/: build_release.sh  run_local_validator.sh
