[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/ingestion",
  "crates/parser",
  "crates/feature",
  "crates/strategy",
  "crates/model",
  "crates/risk",
  "crates/executor",
  "crates/signer",
  "crates/relay",
  "crates/daemon",
  "crates/event_bus",
  "crates/cli",
  "crates/tui",
  "crates/web",
  "crates/tests",
  "crates/persistence",
  "crates/web-dashboard",
  "crates/ai",
  "crates/dashboard"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
