[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hdrhistogram = "7.5"
iai = "0.1"
dhat = "0.3"
rand = "0.8"

[[bench]]
name = "01_tick_pipeline"
path = "benches/01_tick_pipeline.rs"
harness = false

[[bench]]
name = "03_risk_checks"
path = "benches/03_risk_checks.rs"
harness = false

[[bench]]
name = "05_fix_serializer"
path = "benches/05_fix_serializer.rs"
harness = false

[[bench]]
name = "09_memory_layout"
path = "benches/09_memory_layout.rs"
harness = false
