[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
event_bus = { path = "../event_bus" }
