[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
common = { path = "../common" }
crossbeam-channel = "0.5"
serde_json = "1.0"
tokio-retry = "0.3.0"
ai = { version = "0.1.0", path = "../ai" }
swarm_sim = { version = "0.1.0", path = "../swarm_sim" }
chrono.workspace = true
